--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4efd3604",
+   "id": "2725c60b",
    "metadata": {},
    "source": [
     "class War():\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "462d68ca",
+   "id": "ceb7e6b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "904b7880",
+   "id": "90a00f0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5fb9b3a2",
+   "id": "790df03f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a76f7abb",
+   "id": "c1eca7f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a42764d3",
+   "id": "3847a025",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b81c4f63",
+   "id": "c6530e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4a97bebc",
+   "id": "35c601ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "71b62d9a",
+   "id": "7889ea86",
    "metadata": {},
    "outputs": [
     {
@@ -166,25 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "03ad7eb3",
+   "execution_count": 50,
+   "id": "378fd188",
    "metadata": {},
    "outputs": [],
    "source": [
-    "addViking(\"oneee\", \"-\")"
+    "addViking(\"oneee\", \"estas\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "af12e92a",
+   "execution_count": 51,
+   "id": "db1d9e23",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['oneviking', '-', '-', '-', '-', '-', '-', '-']\n"
+      "['oneviking', '-', '-', '-', '-', '-', '-', '-', 'ey', 'hola', 'como', 'estas']\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "769299b7",
+   "id": "51ed7a39",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "652daec6",
+   "id": "94c8f41a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1e0f7a5",
+   "id": "78261a50",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "313c3765",
+   "id": "7d2e8f43",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "426e2f71",
+   "id": "bfcc795e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a8bdaa29",
+   "id": "07015918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,8 +287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "6eeb8078",
+   "execution_count": 64,
+   "id": "83741c76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,13 +297,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "id": "6850a8cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "estas\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(unvikingcualquiera)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "71142c09",
+   "id": "565a1c90",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "p"
-   ]
+   "source": []
   }
  ],
  "metadata": {
