--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2725c60b",
+   "id": "febbccb4",
    "metadata": {},
    "source": [
     "class War():\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ceb7e6b4",
+   "id": "089eda75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "90a00f0b",
+   "id": "5903be3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "790df03f",
+   "id": "718f1888",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c1eca7f0",
+   "id": "a161ad8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3847a025",
+   "id": "f2b4d9a8",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c6530e59",
+   "id": "f1e367a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "35c601ea",
+   "id": "3b7a0520",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7889ea86",
+   "id": "cbec01ff",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "378fd188",
+   "id": "ccbf4c46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "db1d9e23",
+   "id": "3b09823c",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51ed7a39",
+   "id": "a193cff2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94c8f41a",
+   "id": "5da7ea43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78261a50",
+   "id": "b7302c76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7d2e8f43",
+   "id": "0eef573b",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "bfcc795e",
+   "id": "c47edb48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "07015918",
+   "id": "1d883b5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "83741c76",
+   "id": "3eeb7618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6850a8cb",
+   "id": "d446c4a6",
    "metadata": {},
    "outputs": [
     {
@@ -315,8 +315,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "b58f191a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hola = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f2f02442",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(hola)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c181dc40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hola = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "d71c2e2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(hola)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "565a1c90",
+   "id": "3d4aae69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "fd6854b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vikingArmy = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "fb89c416",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def showstatus(self):\n",
+    "        if self.saxonArmy is NoneType:\n",
+    "            return \"Vikings have won the war of the century!\"\n",
+    "\n",
+    "        if self.vikingArmy is NoneType:\n",
+    "            return \"Saxons have fought for their lives and survive another day...\"\n",
+    "        \n",
+    "        if self.saxonArmy >=1 and self.vikingArmy >=1:\n",
+    "            return \"Vikings and Saxons are still in the thick of battle.\"\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "6cf1023e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if vikingArmy is None:\n",
+    "    print (\"Saxons have fought for their lives and survive another day...\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "397270ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saxonArmy = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9b1f119",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "f256a23f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def showstatus():\n",
+    "        if len(self.saxonArmy) == 0:\n",
+    "            return \"Vikings have won the war of the century!\"\n",
+    "\n",
+    "        if len(self.vikingArmy) == 0:\n",
+    "            return \"Saxons have fought for their lives and survive another day...\"\n",
+    "        \n",
+    "        if len(self.saxonArmy) >=1 and len(self.vikingArmy) >=1:\n",
+    "            return \"Vikings and Saxons are still in the thick of battle.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "139e648f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vikings have won the war of the century!\n"
+     ]
+    }
+   ],
+   "source": [
+    " if len(saxonArmy) == 0:\n",
+    "    print (\"Vikings have won the war of the century!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ff5a261",
    "metadata": {},
    "outputs": [],
    "source": []
